🩹 Fix dark mode colors

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
     filter: invert(100%) !important;
   }
 
-  .About_description__2kDGd,
+  .About_description__5NvTY,
   .About_contact__m4JAX {
     filter: invert(100%) !important;
     color: #161515;
